[tool.poetry]
name = "vstab"
version = "0.1.0"
description = "A Very Simple Twitter API Bot Framework for interacting with Twitter V2 API asynchronously."
authors = ["mooncell07 <80042274+mooncell07@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
attrs = "^21.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
